h2. Changelog

h3. Versión 1.3.5 RC3

* Fixed Bug en el PDF del borrador del requerimiento, quitando atributos que no hacían falta.
* Fixed Bug en método trim() de JavaScript en PopUps Manuales de Exclusión y Requerimiento.

h3. Versión 1.3.5 RC2

* Fixed Bug al utilizar la Release Candidate.
* Añadida la exclusión de la solicitud.
* Fixed Bug en la clase que hay que sobreescribir VerificacionFAPController, para indicar los documentos concretos a verificar.
* Fixed Bug al visualizar el detalle de un documento en la verificación de tipos.
* Fixed Bug al descargar recibo de la solicitud en Verificación.
* Ampliado el ancho de los elementos html del popup de verificación de un documento.
* Combo de selección de un requerimiento por descripción corta.
* Fixed Bug Botón Obtener Borrador Requerimiento en Verificación.
* Fixed Bug PDF Borrador Requerimiento en Verificación.

h3. Versión 1.3.5 RC1

* Fixed bug generación de los inits en los modelos.

h3. Versión 1.3.4

* Fixed Bug en la parte de Verificación de Documentación.
* Atributos transient ahora se vuelven a inicializar en el init de la Entidad.
* Fixed Bug actualización semilla expediente.

h3. Versión 1.3.3

* Fixed Bug en algunos permisos de Verificación.

h3. Versión 1.3.2

* Implementación del acceso concurrente al hacer varias operaciones sobre la misma solicitud.
* Fixed Bugs en la Verificación de Documentación.
* Añadido los códigos de Exclusión.
* Página con dos tablas para los códigos de Requerimiento y Exclusión de la aplicación, en Administración.
* Fixed Bug en la generación de la semilla de los identificadores de los expedientes.
* Permitir indicar un destino (target) en los elementos Form del DSL.
* Cambiado el estado de la solicitud a 'enVerificacion' cuando se inicia una verificación.

h3. Versión 1.3.1

* Fixed Bug en la variable de entorno del Commands.py.
* Fixed Bug en los valores del combo de los codigos de requerimiento al saltar un error de validación.