@@ -141,7 +141,7 @@ public class VerificacionController extends VerificacionControllerGen {
 			try {
 				dbSolicitud.verificacion.documentos = VerificacionUtils.getVerificacionDocumentosFromNewDocumentos((List<Documento>)VerificacionFapController.invoke("getNuevosDocumentosVerificar", dbSolicitud.verificacion.id, idSolicitud), dbSolicitud.verificacion.uriTramite, dbSolicitud.verificaciones, idSolicitud);
 			} catch (Throwable e) {
-				play.Logger.error("Error recuperando los documentos nuevos a verificar 1", e);
+				play.Logger.error("Error recuperando los documentos nuevos a verificar", e);
 			}
 			
 			if (!validation.hasErrors()) {
