@@ -1,5 +1,10 @@
 h2. Changelog
 
+h3. Versión 1.3.5 RC4
+
+* Fixed Bug en la fecha de registro de los documentos presentados no pertenecientes al trámite de la Verificacion.
+* Requerido el trámite para iniciar la Verificación.
+
 h3. Versión 1.3.5 RC3
 
 * Fixed Bug en el PDF del borrador del requerimiento, quitando atributos que no hacían falta.
